upgrade jdk version to 1.8